# zarzad

./: Cargo.toml
config/: config.toml
data/: chain.json
scripts/: create_wallet.sh  start_daemon.sh  start_miner.sh
zarza-consensus/: Cargo.toml
zarza-consensus/src/: block.rs  blockchain.rs  lib.rs  transaction.rs  wallet.rs
zarza-daemon/: Cargo.toml
zarza-daemon/src/: cli.rs  main.rs
zarza-miner/: Cargo.toml
zarza-miner/src/: cli.rs  main.rs
zarza-network/: Cargo.toml
zarza-network/src/: lib.rs  messages.rs  p2p.rs
zarza-wallet/: Cargo.toml
zarza-wallet/src/: cli.rs  main.rs
zrzhash/: Cargo.toml
zrzhash/src/: lib.rs
