[package]
name = "zarza-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Zarza Developer"]
description = "Zarza consensus library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hex = "0.4"
thiserror = "1.0"
config = "0.13"
log = "0.4"
# ZRZHasher es ahora nuestra única dependencia de hashing.
zrzhash = { path = "../zrzhash" }
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
rand = "0.8"
sha2 = "0.10"
