[package]
name = "zarza-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Zarza Developer"]
description = "Zarza wallet manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
ring = "0.16"
zarza-consensus = { path = "../zarza-consensus" }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
